--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "alloyfinger": "^0.1.15",
     "normalize.css": "^8.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
