--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "alloyfinger": "^0.1.15",
     "axios": "^0.18.0",
     "js-cookie": "^2.2.0",
+    "n-zepto": "^1.2.0",
     "normalize.css": "^8.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
@@ -21,7 +22,8 @@
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "webpack-spritesmith": "^0.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
