--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "alloyfinger": "^0.1.15",
     "axios": "^0.18.0",
+    "exif-js": "^2.3.0",
     "js-cookie": "^2.2.0",
     "n-zepto": "^1.2.0",
     "normalize.css": "^8.0.0",
