--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "swiper": "^4.3.3",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "webpack-spritesmith": "^0.4.1"
