--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "swiper": "^4.3.3",
+    "uuid": "^3.3.2",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-infinite-scroll": "^2.0.2",
