--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "swiper": "^4.4.1",
+    "timeago.js": "^4.0.0-beta.1",
     "uuid": "^3.3.2",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
