--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.18.0",
     "exif-js": "^2.3.0",
     "js-cookie": "^2.2.0",
+    "moment": "^2.22.2",
     "momentjs": "^2.0.0",
     "n-zepto": "^1.2.0",
     "normalize.css": "^8.0.0",
