--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "momentjs": "^2.0.0",
     "n-zepto": "^1.2.0",
     "normalize.css": "^8.0.0",
+    "photoclip": "^3.4.5",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "swiper": "^4.4.1",
