--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "alloyfinger": "^0.1.15",
     "axios": "^0.18.0",
+    "cropper": "^4.0.0",
+    "cropperjs": "^1.4.3",
     "exif-js": "^2.3.0",
     "js-cookie": "^2.2.0",
     "moment": "^2.22.2",
